--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="main">
         <!--Main content -->
         <div class="main-content">
-        <div>
+        <div class="about_yourself">
         <!--About user -->
         <h2 class="person-vacation">Front-End Developer</h2>
         <h1 >Kateryna Nemirovskay</h1>
